# pr2_tidyup

./: .gitignore  README.md
export_mesh/: CMakeLists.txt  export_mesh.cpp  package.xml
freiburg_tools/screenrun/: CMakeLists.txt  package.xml
freiburg_tools/screenrun/src/: screenrun.cpp
grasp_provider/: CMakeLists.txt  package.xml
grasp_provider/include/grasp_provider/: grasp_provider.h  grasp_provider_storage.h
grasp_provider/launch/: grasp_provider_pr2.launch
grasp_provider/src/: grasp_provider.cpp  grasp_provider_gui.cpp  grasp_provider_gui.h  grasp_provider_gui.ui  grasp_provider_gui_main.cpp  grasp_provider_storage.cpp  main.cpp
howtos/: bashrc  (+6 more)
manipulation_location_generator_msgs/: CMakeLists.txt  package.xml
manipulation_location_generator_msgs/srv/: CreateManipulationLocation.srv
tidyup/: CMakeLists.txt  package.xml
tidyup/config/: armsAtSide.yaml
tidyup/include/tidyup/: arm_to_side_action_server.h  arm_to_side_server.h  arms_at_side.h  arms_at_side_service_server.h
tidyup/launch/: tidyup.launch
tidyup/src/: arm_to_side_action_server.cpp  arm_to_side_server.cpp  arms_at_side.cpp  arms_at_side_service_server.cpp  main.cpp  tidyup.cpp
tidyup_demo_launch/: CMakeLists.txt  package.xml
tidyup_demo_launch/config/: landmarks-kbsg-kitchen.yaml  rviz.vcg
tidyup_demo_launch/config/planning/: actions.yaml  domain.yaml  inverse_reachability_maps.yaml  module_options.yaml
tidyup_demo_launch/config/rviz/: rviz.rviz
tidyup_demo_launch/domain/: domain.pddl  problem.pddl
tidyup_demo_launch/launch/: continual_planning.launch  landmarks-kbsg.launch  map_server.launch  rviz.launch  screen_m1.launch  screen_simulation.launch
tidyup_demo_launch/maps/: inv_cap_table1_pr2_combined_0.05m_16t.icpm  inv_cap_table1_pr2_combined_0.1m_16t.icpm  inv_cap_table2_padding_0.1_pr2_combined_0.1m_16t.icpm  inv_cap_table2_pr2_combined_0.05m_16t.icpm  inv_cap_table2_pr2_combined_0.1m_16t.icpm  map.pgm  map.yaml  octomap.bt
tidyup_demo_launch/simulation/: map.sdf  map.urdf
tidyup_executive/: CMakeLists.txt  README  package.xml
tidyup_executive/config/: left_arm_to_front.yaml  pr2_arm_configurations.yaml  right_arm_to_front.yaml  sushi_tables.yaml
tidyup_executive/config/mprim/: genmprim.m  pr2.mprim  pr2_001.mprim  pr2_002.mprim  pr2_002_unbiased.mprim
tidyup_executive/domain/: domain.pddl  domain_grounding_modules.pddl  domain_grounding_modules.pddl.lift-modules  domain_grounding_tidyup.pddl  domain_modules.pddl  plan.best  problem.pddl  problem_grounding_modules.pddl
tidyup_executive/launch/: #arm_services.launch  #mobility.launch  #move_base_sbpl_planning_scene.launch  #ompl_planning.launch  #pr2_manipulation.launch  #pr2_planning_environment.launch  #pr2_tabletop_manipulation.launch  #pr2_two_arm_controller.launch  common.launch  continual_planning.launch  gazebo_robot.launch  gazebo_robot_single_room.launch  global_localization.launch  household_objects_database.launch  laser+stereo-perception.launch  left_arm_collision_free_ik.launch  move_base_3dnav.launch  move_base_sbpl.launch  move_group.launch  object_manipulator.launch  ompl_planning.launch  pr2_basics.launch  pr2_manipulation.launch  pr2_manipulation_prerequisites.launch  pr2_move_group.launch  pr2_moveit_sensor_manager.launch.xml  prerequisites.launch  right_arm_collision_free_ik.launch  screen_m1.launch  tabletop_complete.launch  teleop_joystick.launch
tidyup_executive/launch/mapping/: amcl_node.xml  octomap_mapping.launch  slam_gmapping_pr2.launch
tidyup_msgs/: CMakeLists.txt  package.xml
tidyup_msgs/.svn/: all-wcprops  dir-prop-base  entries
tidyup_msgs/action/: ArmToInspectObject.action  GraspObject.action  PlaceObject.action
tidyup_msgs/action/.svn/: all-wcprops  entries
tidyup_msgs/msg/.svn/: all-wcprops  dir-prop-base  entries
tidyup_msgs/src/.svn/: all-wcprops  dir-prop-base  entries
tidyup_msgs/srv/: GetInspectPose.srv  GetPutdownPose.srv
tidyup_msgs/srv/.svn/: all-wcprops  entries
tidyup_single_room_launch/: CMakeLists.txt  package.xml
tidyup_single_room_launch/config/: actions.yaml  inverse_reachability_maps.yaml  inverse_reachability_sampling.yaml  rviz.rviz
tidyup_single_room_launch/config/planning/: actions.yaml  actions.yaml.bak  domain.yaml  inverse_reachability_maps.yaml  module_options.yaml  navigation_cache.yaml  planner_params.yaml
tidyup_single_room_launch/config/rviz/: rviz.rviz
tidyup_single_room_launch/domain/: domain_modules.pddl  domain_modules_tidyup.pddl
tidyup_single_room_launch/launch/: continual_planning.launch  rviz.launch  screen_simulation.launch
tidyup_single_room_launch/maps/: inv_cap_table1_padding_0.1_pr2_combined_0.1m_16t.icpm  inv_cap_table1_pr2_combined_0.1m_16t.icpm  inv_cap_table2_pr2_combined_0.1m_16t.icpm  map.pgm  octomap.bt
tidyup_single_room_launch/simulation/: single_room.sdf  single_room_world.sdf
tidyup_tools/: CMakeLists.txt  manifest.xml
tidyup_tools/scripts/: check_robot_locations.py  check_robot_locations_repeatedly.py  check_robot_planning_scene_location.py  create_actions_file.py  detect_graspable_objects.py  move_arms_to_side.py  print_arm_states.py  record_table_service.py  roscreate-tidyup-pkg  test_attached_sponge.py  test_putdown_feasibility.py  test_putdown_module.py
tidyup_tools/src/: octree_to_collision_space.cpp  sbplConfigWriter.cpp  test_nav_planning_scene.cpp  test_nav_sbpl.cpp  test_planning_scene_interface.cpp  tidyupTeachingGui.cpp  tidyupTeachingGui.h  tidyupTeachingGui.ui  tidyupTeachingGuiMain.cpp
tidyup_tools/tidyup_config_template/: tidyup.vcg
tidyup_tools/tidyup_config_template/launch/: screen_m1.launch
tidyup_tools/tidyup_config_template/mapping/: pr2_both_arms_tidyup.yaml.1  (+1 more)
tidyup_utils/: CMakeLists.txt  package.xml
tidyup_utils/src/: arm_state.cpp  arms_at_side.cpp  geometryPoses.cpp  geometryPosesCreatorGui.cpp  geometryPosesCreatorGui.h  geometryPoses_test.cpp  get_pose_stamped_from_param.cpp  hand_description.cpp  planning_scene_interface.cpp  planning_scene_msg_interface.cpp  stringutil.cpp  transformer.cpp
tidyup_utils/test/: test_planning_scene_msg_interface.cpp
(+364 files in other folders)
