<?xml version="1.0"?>
<package>
  <name>export_mesh</name>
  <version>0.1.0</version>
  <description>The export_mesh package</description>
  <maintainer email="lannersluc@gmail.com">luc</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/GKIFreiburg/pr2_tidyup/tree/master/export_mesh</url>
  <url type="bugtracker">https://github.com/GKIFreiburg/pr2_tidyup/issues</url>
  <url type="repository">https://github.com/GKIFreiburg/pr2_tidyup/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>household_objects_database</build_depend>
  <run_depend>household_objects_database</run_depend>
</package>
