<?xml version="1.0"?>
<package>
  <name>tidyup</name>
  <version>0.0.0</version>
  <description>The tidyup package provides services and actions</description>
  <maintainer email="lannersluc@gmail.com">Lanners Luc</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/tidyup_arm_services</url> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tidyup_msgs</build_depend>
  <build_depend>tidyup_utils</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>symbolic_planning_utils</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tidyup_msgs</run_depend>
  <run_depend>tidyup_utils</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>symbolic_planning_utils</run_depend>
</package>
