<package>
  <name>tidyup_demo_launch</name>
  <version>0.0.0</version>
  <description>
     tidyup_demo_launch
  </description>
  <maintainer email="lannersluc@gmail.com">Luc Lanners</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/tidyup_demo_launch</url>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>navigation_actions</build_depend>
  <build_depend>object_manipulation_actions</build_depend>
  <build_depend>tidyup_state_creators</build_depend>
  
  <run_depend>navigation_actions</run_depend>
  <run_depend>object_manipulation_actions</run_depend>
  <run_depend>tidyup_state_creators</run_depend>
  <!--<depend package="tidyup_executive"/>-->
</package>


