<package>
  <name>tidyup_demo_launch</name>
  <version>0.0.0</version>
  <description>
     tidyup_demo_launch
  </description>
  <maintainer email="lannersluc@gmail.com">Luc Lanners</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/tidyup_demo_launch</url>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>navigation_actions</build_depend>
  <build_depend>object_manipulation_actions</build_depend>
  <build_depend>tidyup_state_creators</build_depend>
  
  <run_depend>navigation_actions</run_depend>
  <run_depend>object_manipulation_actions</run_depend>
  <run_depend>tidyup_state_creators</run_depend>
  <run_depend>tidyup_executive</run_depend>
  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
  </export>
</package>


