<package>
  <name>tidyup_executive</name>
  <version>0.0.0</version>
  <description>
     tidyup_executive contains config files as well as launch files
  </description>
  <maintainer email="lannersluc@gmail.com">Luc Lanners</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/tidyup_executive</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gki_3dnav_planner</build_depend>
  <build_depend>object_manipulation_actions</build_depend>
  <build_depend>tidyup_state_creators</build_depend>
  <build_depend>planner_modules_pr2</build_depend>
#  <build_depend>continual_planning_server</build_depend>
  <build_depend>continual_planning_executive</build_depend>
  <build_depend>continual_planning_monitor</build_depend>
  <build_depend>tfd_modules</build_depend>
  <build_depend>screenrun</build_depend>
  

  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gki_3dnav_planner</run_depend>
  <run_depend>object_manipulation_actions</run_depend>
  <run_depend>tidyup_state_creators</run_depend>
  <run_depend>planner_modules_pr2</run_depend>
#  <run_depend>continual_planning_server</run_depend>
  <run_depend>continual_planning_executive</run_depend>
  <run_depend>continual_planning_monitor</run_depend>
  <run_depend>tfd_modules</run_depend>
  <run_depend>screenrun</run_depend>

</package>


