<package>
  <name>tidyup_msgs</name>
  <version>0.0.0</version>
  <description>
    Messages used in the TidyUp project.
  </description>
  <maintainer email="dornhege@informatik.uni-freiburg.de">Maintained by Christian Dornhege</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/tidyup_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


