<package>
  <name>tidyup_utils</name>
  <version>0.0.0</version>
  <description>
     Utility classes for the Tidyup project.
  </description>
  <maintainer email="dornhege@informatik.uni-freiburg.de">Andreas Hertle, Christian Dornhege</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/tidyup_utils</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  

  <!--<rosdep name="libqt4-dev"/>-->

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -ltidyup_utils"/>
  </export>

</package>

