<package>
  <name>screenrun</name>
  <version>0.0.0</version>
  <description>
      screenrun is a small tool that pushes commands into a screen window.
      Use \015 after a command for ENTER, i.e. executing it.
  </description>
  <maintainer email="dornhege@informatik.uni-freiburg.de">Christian Dornhege</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/screenrun</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

</package>


